--- a/app/src/main/res/layout/fragment_native_language.xml
+++ b/app/src/main/res/layout/fragment_native_language.xml
@@ -26,13 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/native_language_card"
@@ -52,6 +46,15 @@
                 android:background="@color/white"
                 android:divider="@null"
                 android:scrollbars="none" />
+
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+
         </androidx.cardview.widget.CardView>
 
         <Button
