--- a/app/src/main/res/layout/fragment_language.xml
+++ b/app/src/main/res/layout/fragment_language.xml
@@ -7,8 +7,9 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/country_image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/language_level_flag_size"
+        android:layout_height="@dimen/language_level_flag_size"
+        android:layout_gravity="center"
         app:srcCompat="@drawable/ic_fr" />
 
     <androidx.appcompat.widget.AppCompatImageView
