--- a/app/src/main/res/layout/profile_content.xml
+++ b/app/src/main/res/layout/profile_content.xml
@@ -95,10 +95,20 @@
             android:layout_height="1dp"
             android:background="?android:attr/listDivider" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:labelFor="@id/languages"
+            android:text="Изучаемые языки"
+            />
+
         <GridView
             android:id="@+id/languages"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:numColumns="auto_fit"
+            android:layout_marginTop="8dp"
+            />
 
     </LinearLayout>
 
