--- a/app/src/main/res/navigation/registration_graph.xml
+++ b/app/src/main/res/navigation/registration_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/registration_graph"
-    app:startDestination="@id/signUpActivity">
+    app:startDestination="@id/nonNativeLanguage">
 
     <fragment
         android:id="@+id/signUpActivity"
@@ -23,6 +23,11 @@
         android:id="@+id/nonNativeLanguage"
         android:name="com.kamil184.lingly.main.authorization.Registration.non_native_language.NonNativeLanguageFragment"
         android:label="NonNativeLanguageFragment" />
+    <fragment
+        android:id="@+id/selectLanguageLevel"
+        android:name="com.kamil184.lingly.main.authorization.Registration.language_level.SelectLanguageLevelFragment"
+        android:label="SelectLanguageLevelFragment"
+        tools:layout="@layout/fragment_extrauserinfo" />
     <activity
         android:id="@+id/mainActivity2"
         android:name="com.kamil184.lingly.MainActivity"
