--- a/app/src/main/res/navigation/registration_graph.xml
+++ b/app/src/main/res/navigation/registration_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/registration_graph"
-    app:startDestination="@id/nonNativeLanguage">
+    app:startDestination="@id/signUpActivity">
 
     <fragment
         android:id="@+id/signUpActivity"
