--- a/app/src/main/res/drawable/profile_divider.xml
+++ b/app/src/main/res/drawable/profile_divider.xml
@@ -7,7 +7,7 @@
             <size
                 android:width="200dp"
                 android:height="40dp" />
-            <solid android:color="#5EB888" />
+            <solid android:color="@color/colorPrimary" />
             <corners android:radius="0dp"/>
         </shape>
     </item>
