--- a/app/src/main/res/drawable/profile_divider.xml
+++ b/app/src/main/res/drawable/profile_divider.xml
@@ -21,7 +21,7 @@
         <rotate
             android:fromDegrees="45">
             <shape android:shape="rectangle">
-                <solid android:color="#ffffff" />
+                <solid android:color="@color/white" />
             </shape>
         </rotate>
     </item>
@@ -35,7 +35,7 @@
         <rotate
             android:fromDegrees="-45">
             <shape android:shape="rectangle">
-                <solid android:color="#ffffff" />
+                <solid android:color="@color/white" />
             </shape>
         </rotate>
     </item>
